# garden-shell

./: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  justfile
.claude/: settings.local.json
_config/: niri.kdl  palettes.json  palettes.toml  settings.json
_qml/: Theme.qml  shell.qml
_qml/bar/: Bar.qml  BarChannel.qml  BarClock.qml  BarDot.qml  BarStateSlot.qml  BarSystemState.qml
_qml/components/: GButton.qml  HintLabel.qml  ResultItem.qml
_qml/compositor/: CompositorService.qml  NiriAdapter.qml
_qml/dev/: pamtest.qml  probe.qml
_qml/lock/: LockScreen.qml  LockSurface.qml
_qml/notifications/: NotificationCard.qml  NotificationPopups.qml
_qml/osd/: Osd.qml
_qml/overlays/: ChannelSwitcher.qml  ColorInput.qml  ColorInputGroup.qml  DitherOverlay.qml  KeybindsPlaceholder.qml  Launcher.qml  NotificationCenter.qml  OverlayBase.qml  PaletteEditor.qml  PowerMenu.qml  (+3 more)
book/: book.toml
crates/garden-themes/: Cargo.toml  justfile
crates/garden-themes/src/: lib.rs  main.rs
crates/garden-themes/src/generators/: bat.rs  btop.rs  fish.rs  fzf.rs  kakoune.rs  kitty.rs  lazygit.rs  mod.rs  niri.rs  yazi.rs  zathura.rs
crates/garden-themes/tests/: generators.rs
docs/: code-review-2026-07.md
modules/: dendritic.nix  devshell.nix  lib.nix  namespace.nix  packages.nix  systems.nix
plan/: core-services-plan.md  garden-jam-session.md  garden-palette-editor.jsx  garden-palette-explorer.jsx  garden-shell-channels.jsx  garden-shell-expanded.jsx  garden-shell-hosts.jsx  garden-shell-mockup.jsx  garden-shell-settings.jsx  niri-overview-backdrop.md  session-handoff.md
(+50 files in other folders)
