[workspace]
resolver = "2"
members = [
    "crates/garden-core",
    "crates/garden-daemon",
    "crates/garden-ctl",
    "crates/garden-tui",
    "crates/garden-themes",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
