[package]
name = "garden-themes"
version = "0.1.0"
edition = "2021"

[dependencies]
garden-core = { path = "../garden-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
